--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "http-server -p 3001",
     "lint:css": "stylelint './**/*.css'",
     "lint": "npm run lint:js && npm run lint:css",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -28,14 +29,19 @@
   },
   "devDependencies": {
     "axios": "^1.3.4",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.3",
     "prettier": "^2.8.6",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^25.0.0",
-    "stylelint-prettier": "^2.0.0"
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
