--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ./**",
-    "lint:js": "eslint './**/*.js'",
+    "lint:js": "eslint './*.js'",
     "start": "http-server -p 3001",
-    "lint:css": "stylelint './**/*.css'",
+    "lint:css": "stylelint './*.css'",
     "lint": "npm run lint:js && npm run lint:css",
     "prepare": "husky install",
-    "build": "webpack"
+    "build": "NODE_ENV=production webpack",
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-prettier": "^2.0.0",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
   }
 }
